<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_leaderboard" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Settings" />
    </group>
</menu>